paper/results/run4/d-tools-L251-value_swap/bca_no_scoring/8000/dev_report/test_output.txt
============================= test session starts ==============================
platform darwin -- Python 3.11.11, pytest-8.3.5, pluggy-1.5.0
rootdir: /Users/akshankrithick/projects/pydantic-ai
configfile: pyproject.toml
plugins: respx-0.22.0, mock-3.15.1, recording-0.13.4, xdist-3.8.0, timeout-2.4.0, order-1.3.0, anyio-4.8.0, rerunfailures-15.1, inline-snapshot-0.31.1, hypothesis-6.148.2, asyncio-1.3.0, rich-0.2.0, cov-7.0.0
asyncio: mode=Mode.STRICT, debug=False, asyncio_default_fixture_loop_scope=None, asyncio_default_test_loop_scope=function
collected 0 items / 1 error
!!!!!!!!!!!!!!!!!!!! Interrupted: 1 error during collection !!!!!!!!!!!!!!!!!!!!

      ^^^^^
  File "/Users/akshankrithick/anaconda3/envs/vvenv/lib/python3.11/site-packages/pluggy/_callers.py", line 122, in _multicall
    teardown.throw(exception)  # type: ignore[union-attr]
    ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/akshankrithick/anaconda3/envs/vvenv/lib/python3.11/site-packages/_pytest/terminal.py", line 893, in pytest_sessionfinish
    result = yield
             ^^^^^
  File "/Users/akshankrithick/anaconda3/envs/vvenv/lib/python3.11/site-packages/pluggy/_callers.py", line 122, in _multicall
    teardown.throw(exception)  # type: ignore[union-attr]
    ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/akshankrithick/anaconda3/envs/vvenv/lib/python3.11/site-packages/_pytest/warnings.py", line 141, in pytest_sessionfinish
    return (yield)
            ^^^^^
  File "/Users/akshankrithick/anaconda3/envs/vvenv/lib/python3.11/site-packages/pluggy/_callers.py", line 103, in _multicall
    res = hook_impl.function(*args)
          ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/akshankrithick/anaconda3/envs/vvenv/lib/python3.11/site-packages/inline_snapshot/pytest_plugin.py", line 174, in pytest_sessionfinish
    self.session.show_report(Console(highlight=False))
  File "/Users/akshankrithick/anaconda3/envs/vvenv/lib/python3.11/site-packages/inline_snapshot/_snapshot_session.py", line 434, in show_report
    used += used_externals_in(file, content, check_import=check_import)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/akshankrithick/anaconda3/envs/vvenv/lib/python3.11/site-packages/inline_snapshot/_external/_find_external.py", line 33, in used_externals_in
    tree = ast.parse(source)
           ^^^^^^^^^^^^^^^^^
  File "/Users/akshankrithick/anaconda3/envs/vvenv/lib/python3.11/ast.py", line 50, in parse
    return compile(source, filename, mode, flags,
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<unknown>", line 141
    'parameters_json_schema': {
                            ^
SyntaxError: invalid syntax